--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-5">
-                    <a class="btn btn-xl btn-outline-light" href="https://github.com/GodFatherIsPro" target="_blank">
+                    <a class="btn btn-xl btn-outline-light" href="https://github.com/iamsuryanshxd/" target="_blank">
                         <i class="fab fa-github mr-2"></i>
                         <p class="lang" style="display: inline;" key="myGithub">My Github</p>
                     </a>
