name update and insta

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Suryansh Shukla - Portfolio</title>
+        <title>Abhishek Shukla - Portfolio</title>
         <!-- Favicon -->
         <link rel="icon" href="img/favicon.gif" type="image/x-icon" />
         <!-- Font Awesome icons -->
@@ -203,7 +203,7 @@
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
                         <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="https://www.linkedin.com/in/"><i class="fab fa-fw fa-linkedin-in"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="https://www.facebook.com/"><i class="fab fa-fw fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="https://www.instagram.com/iamsuryanshxd"><i class="fab fa-fw fa-instagram"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="https://www.instagram.com/wowabhishx/"><i class="fab fa-fw fa-instagram"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="https://twitter.com/"><i class="fab fa-fw fa-twitter"></i></a>
                     </div>
                     <!-- Footer About Text-->
